# RagTestFramework

./: .env.example  .gitignore  README.md  _ul  config.py  dashboard.py  main.py  output.txt  pyproject.toml
ci_cd/: __init__.py  quality_gates.py  report.py
content_filter/: __init__.py  filter.py
data/test_cases/: context_manipulation.json  corpus_poisoning.json  data_exfiltration.json  direct_injection.json  faithfulness.json  kb_syntax_corpus_poisoning.json  kb_syntax_faithfulness.json
evaluator/: __init__.py  judge.py  ragas_metrics.py  security_metrics.py
rag/: __init__.py  agent_registry.py  azure_agent.py  base_agent.py  copilot_agent.py  generic_http_agent.py  pipeline.py  syntax_agent.py  wrapper.py
rag/sample_docs/: company_policies.txt  products.txt  technical_guide.txt
response_verifier/: __init__.py  verifier.py
test_generator/: __init__.py  base.py  cat1_faithfulness.py  cat2_context_manipulation.py  cat3_direct_injection.py  cat4_corpus_poisoning.py  cat5_data_exfiltration.py  kb_generator.py  llm_generator.py
