[project]
name = "rag-test-framework"
version = "0.1.0"
description = "Automatisierte Validierung von RAG-Agents: Qualität und Sicherheit durch Adversarial Agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "chromadb>=0.6.0",
    "ragas>=0.2.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag", "test_generator", "evaluator", "content_filter", "response_verifier", "ci_cd"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
